# sim-agent

./: .gitignore  CMakeLists.txt  Makefile  config.json  setup_gazebo.bash  start_sim.sh
src/: agent.cpp  agent.h  commander.cpp  commander.h  main.cpp  navigation_area.h  server_manager.cpp  server_manager.h  telemetry_manager.cpp  telemetry_manager.h
